web-infras/parser/tests/fixtures/babel/es2022/class-private-properties/failure-delete-optional-private-property/output.txt
[SyntaxError]: applying the 'delete' operator to an unqualified name is deprecated (4,18)
4|    delete this?.#x;
 |                ^
